--- a/styles/style.css
+++ b/styles/style.css
@@ -13,14 +13,167 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color:  #f2f2f2;
+  position: relative;
+  display: flex;
+
   /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo_place_header {
+height: 32px;
+width: 183px;
+top: 30px;
+left: 64px;
+position: absolute;
+z-index: 3;
+}
+
+.header__title{
+  width: 730px;
+  left: 64px;
+  align-self:center;
+  margin-left: 64px;
+  font-size: 102px;
+  font-weight: bold;
+  z-index: 3;
+  line-height: 96px;
+}
+
+.header__subtitle{
+  width: 388px;
+  bottom: 30px;
+  left: 64px;
+  position: absolute;
+  line-height: 25px;
+  font-size: 18px;
+  z-index: 3;
+}
+
+.header__link{
+  text-decoration: none;
+  color: #2f80ed;
+
+}
+
+.header__main-illustration{
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 1;
 }
+
+/*блок description*/
+
+.description{
+  display: flex;
+  justify-content: center;
+}
+
+.two-columns{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 80%;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.two-columns__brief {
+  width: 175px;
+  margin: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  color: #2f80ed;
+}
+
+.two_columns__main-text{
+  min-width: 784px;
+  width: 80%;
+}
+
+.two-columns__paragraph{
+  padding-bottom: 30px;
+  margin: 0;
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.two-columns__paragraph:last-of-type{
+  padding: 0;
+}
+
+.two-columns__span-accent{
+  font-weight: bold;
+}
+/* блок digits */
+
+.digits {
+margin: 100px auto 100px auto;
+
+}
+.section-title {
+  width: 60%;
+  text-align: center;
+  margin: 0 auto 20px auto;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.table {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.table__cell {
+  width: 250px;
+  border: red solid 1px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+
+}
+
+.table__text {
+  margin-top: 20px;
+  margin-bottom: 0;
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
