--- a/styles/style.css
+++ b/styles/style.css
@@ -153,8 +153,7 @@ margin: 100px auto 100px auto;
 
 .table__cell {
   width: 250px;
-  border: red solid 1px;
-  margin-top: 60px;
+    margin-top: 60px;
 }
 
 .table__heading {
@@ -171,14 +170,156 @@ margin: 100px auto 100px auto;
   line-height: 1.2;
   font-size: 18px;
 }
+/* Блок Феймана*/
+.feynman{
+  position: relative;
+  height: 890px;
+  background-color: #f2f2f2 ;
+  z-index: -2;
+}
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.feynman__illustration {
+  height: 637px;
+  width: 867px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.feynman__title {
+  width: 648px;
+  padding-top: 100px;
+  margin: 0 auto;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  margin: 70px auto 0 auto;
+  text-align: center;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+
+}
 
 
-/* и элемента с модификатором вида ключ-значение */
+/*Кауфман Принципы обучения*/
+
+.kaufman {
+background-color: #1f1f1f;
+padding: 90px 0;
+position: relative;
+z-index: -2;
+overflow: hidden;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.section-title_theme_dark {
+ color: white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  background-image: url("../images/kaufman-triangle.svg");
+  z-index: -1;
+  background-size: contain;
+  top: 0;
+  right: -290px;
+}
+
+/* Подвал */
+
+.footer {
+  display: flex;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  color: white;
+  box-sizing: border-box;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  }
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 90%;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+
+.logo__footer {
+  height: 35px;
+  width: 183px;
+}
+
+.footer__autor {
+ line-height: 25px;
+ font-size: 18px;
+}
+
+.footer__column_content_info{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_social{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.footer__column-links {
+  margin-bottom: 16px;
+  margin-top: 20px;
+  list-style: none;
+  padding: 0;
+}
+.footer__column-heading{
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.footer__column-link{
+  line-height: 30px;
+  font-size: 18;
+  list-style: none;
+  text-decoration: none;
+  color: white;
+}
+
+.footer__social_icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
