--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,11 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  transition: 2s ease;
+}
+
+.header__link:hover{
+  opacity: 0.5;
 }
 
 .header__main-illustration {
@@ -79,8 +84,18 @@
   top: 64px;
   right: 0;
   z-index: 1;
+  animation: rotation linear 20s infinite;
+  overflow: hidden;
 }
 
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
+}
 /*Основной контент, блок description*/
 
 .description {
@@ -123,6 +138,150 @@
 
 .two-columns__span-accent {
   font-weight: bold;
+}
+
+/*Основной контент, блок techniques*/
+
+.techiques {
+  margin: 100px auto 100px auto;
+}
+
+.cards {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 100px;
+  width: 920px;
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
+
+}
+
+.cards__item {
+  width: 240px;
+  text-align: center;
+  margin-top: 60px;
+  }
+
+.cards__image {
+  border-radius: 50%;
+  width: 160px;
+  height: 160px;
+  margin: 0 40px 43px;
+
+}
+
+.cards__title {
+  margin: 0 0 16px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.cards__description {
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: normal;
+  margin:0;
+}
+
+/*Основной контент, блок video*/
+.video__iframes {
+  text-align: center;
+  margin: 50px auto -60px;
+}
+
+.video__iframe {
+margin-right: 20px;
+}
+
+.video__iframe:last-of-type {
+margin: 0;
+}
+
+/*Основной контент, блок Оакли*/
+
+.oakley {
+  display: flex;
+  justify-content: center;
+  background-color: #f2f2f2;
+  padding: 60px 0 0 0;
+}
+
+/*Основной контент, блок Кхан*/
+.khan {
+  background-color: #f2f2f2;
+
+}
+
+.khan__container {
+width: 80%;
+padding-top: 105px;
+margin: 0 auto;
+}
+
+.khan__author {
+line-height: 42px;
+font-size: 30px;
+font-weight: normal;
+margin: 0;
+}
+
+.khan__title {
+line-height: 1.15;
+font-size: 60px;
+font-weight: bold;
+margin: 0;
+}
+
+.khan__quote {
+width: 790px;
+line-height: 34px;
+font-size: 24px;
+font-weight: normal;
+margin: 50px 0 36px;
+}
+
+.khan__quote-author {
+ line-height: 1.15;
+ font-size: 24px;
+ font-weight: bold;
+ margin: 0;
+}
+
+.khan__quote-author-subline {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 10px 0 0;
+
+
+}
+
+.khan__book-container {
+display: flex;
+margin: 68px 0 0;
+}
+
+.khan__book-pic {
+  width: 620px;
+  height: 608px;
+  margin: 0 48px 0 0;
+
+}
+
+.khan__buy-link {
+  text-decoration: none;
+  color:  #2f80ed;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  transition: 2s linear;
+}
+
+.khan__buy-link:hover {
+  opacity: 0.5;
 }
 
 /*Основной контент, блок digits*/
@@ -223,6 +382,11 @@
   right: 48px;
   text-decoration: none;
   color: #2f80ed;
+  transition: 2s linear;
+}
+
+.feynman__link:hover{
+  opacity: 0.5;
 }
 
 /*Основной контент, блок Кауфман*/
@@ -259,7 +423,30 @@
   background-size: contain;
   top: 0;
   right: -290px;
+  animation: rotation linear 20s infinite;
+  overflow: hidden;
 }
+/* Основной блок, блок ресурсы*/
+.resources {
+  padding: 100px;
+}
+
+.resources_logo-zone {
+  display:flex;
+  margin: 80px auto 217px;
+  width: 1100px;
+  list-style: none;
+  text-align: center;
+  padding: 0;
+}
+
+.resources_logo {
+  width: 270px;
+  height: 38px;
+
+}
+
+
 
 /* Конец основного контента, подвал */
 
