--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -2,11 +2,9 @@
   position: absolute;
   width: 877px;
   height: 877px;
-  background-image: url("/images/kaufman-triangle.svg");
-  z-index: 1;
+  background-image: url(../../../images/kaufman-triangle.svg);
+  z-index: 0;
   background-size: contain;
   top: 0;
   right: -290px;
-  animation: rotation linear 20s infinite;
-  overflow: hidden;
 }
