Второй проект (2 ревью устранение замечаний)

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,6 +1,6 @@
 .cards {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 100px;
   width: 920px;
